<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_singbox_gui"
        android:icon="@drawable/baseline_public_24"
        android:title="@string/menu_dashboard"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_auto_dns"
        android:icon="@drawable/ic_baseline_domain_24"
        android:title="@string/menu_auto_dns"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:title="@string/add_profile_methods_scan_qr_code" />
            <item
                android:id="@+id/action_import_clipboard"
                android:title="@string/action_import" />
            <item
                android:id="@+id/action_import_file"
                android:title="@string/action_import_file" />
            <item android:title="@string/add_profile_methods_manual_settings">
                <menu>
                    <item
                        android:id="@+id/action_new_socks"
                        android:title="@string/action_socks" />
                    <item
                        android:id="@+id/action_new_http"
                        android:title="@string/action_http" />
                    <item
                        android:id="@+id/action_new_ss"
                        android:title="@string/action_shadowsocks" />
                    <item
                        android:id="@+id/action_new_vmess"
                        android:title="@string/action_vmess" />
                    <item
                        android:id="@+id/action_new_vless"
                        android:title="VLESS" />
                    <item
                        android:id="@+id/action_new_trojan"
                        android:title="@string/action_trojan" />
                    <item
                        android:id="@+id/action_new_trojan_go"
                        android:title="@string/action_trojan_go" />
                    <item
                        android:id="@+id/action_new_mieru"
                        android:title="@string/action_mieru" />
                    <item
                        android:id="@+id/action_new_naive"
                        android:title="@string/action_naive" />
                    <item
                        android:id="@+id/action_new_hysteria"
                        android:title="@string/action_hysteria" />
                    <item
                        android:id="@+id/action_new_tuic"
                        android:title="@string/action_tuic" />
                    <item
                        android:id="@+id/action_new_shadowtls"
                        android:title="@string/action_shadowtls" />
                    <item
                        android:id="@+id/action_new_anytls"
                        android:title="@string/action_anytls" />
                    <item
                        android:id="@+id/action_new_ssh"
                        android:title="@string/action_ssh" />
                    <item
                        android:id="@+id/action_new_wg"
                        android:title="@string/action_wireguard" />
                    <item
                        android:id="@+id/action_new_config"
                        android:title="@string/custom_config" />
                    <item
                        android:id="@+id/action_new_chain"
                        android:title="@string/proxy_chain" />
                </menu>
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/action_update_subscription"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/update_current_subscription"
        app:showAsAction="always" />

</menu>
